...
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yi7-zS-kFC">
                                <rect key="frame" x="16" y="254" width="288" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="inputField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="g1X-t0-eno"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dhT-lG-LAt" userLabel="ResultView">
                                <rect key="frame" x="16" y="50" width="288" height="30"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="textField">
                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                </accessibility>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                                <rect key="frame" x="16" y="220" width="288" height="128"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P0H-I3-8ch">
                                        <rect key="frame" x="93" y="77" width="102" height="45"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <state key="normal" title="Close">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="closePopUp:" destination="now-dl-H0c" eventType="touchUpInside" id="RlV-0x-weW"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⚠️   Division by zero" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7B-0t-4RK">
                                        <rect key="frame" x="24" y="26" width="240" height="33"/>
                                        <accessibility key="accessibilityConfiguration" label="DivBy0"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qlu-LX-h3q">
                                <rect key="frame" x="3" y="220" width="314" height="128"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⚠️   Invalid Expression" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kbb-Qs-kKA">
                                        <rect key="frame" x="24" y="26" width="266" height="33"/>
                                        <accessibility key="accessibilityConfiguration" label="invalExp"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y08-vK-Na2">
                                        <rect key="frame" x="106" y="75" width="102" height="45"/>
...
